--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,10 @@ body {
     border: 3px solid #931420;
     background-color: #fffded;
 }
+table {
+	border-top:5px;
+	border-botom:5px;
+	border-color:800000
 a:focus, a:hover {
 	font-style: italic;
 }
